refactor: use model instead of dto inside club DAO